k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-management-service
  labels:
    app: library-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-management-service
  template:
    metadata:
      labels:
        app: library-management-service
    spec:
      containers:
      - name: library-management-service
        image: vinodjagwani/library-management-service:latest
        ports:
        - containerPort: 8089
        volumeMounts:
        - name: app-logs
          mountPath: /app/logs
      volumes:
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
