k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-management-service
spec:
  selector:
    app: library-management-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
  type: LoadBalancer
